[metadata]
license = Apache License, Version 2.0

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs =
    .git
    dist
    build
    env
    venv
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict --cov=word2vec --cov-report term-missing --cov-report xml --cov-report html

# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
[flake8]
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950
