[metadata]
license = Apache License, Version 2.0

[bdist_wheel]
universal = 1

[flake8]
# https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length
max-line-length = 80
ignore = E203, E501, W503
select = C,E,F,W,B,B950
paths = .,word2vec
exclude = .git,dist,build,env,venv

[tool:pytest]
norecursedirs = .git,dist,build,env,venv
strict = true
addopts = word2vec/tests -s -vv --cov-config=pyproject.toml --cov=word2vec --cov-report term
markers =
    data: requires the test data (deselect with '-m "not data"')
    commands: requires the commands in the PATH (deselect with '-m "not commands"')
